# search-service

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  server.py
.github/workflows/: ci.yml  release.yml
api/proto/: buf.yaml
api/search/v1/: search.pb.go  search_grpc.pb.go
cmd/search-service/: main.go
config/: config.example.yaml  synonyms.yaml
docs/: README.md  architecture.md  configuration.md  development.md  docs.go  openapi.yaml  swagger.json  swagger.yaml
inference/: Dockerfile  pyproject.toml
inference/src/onix_search_inference/: __init__.py  api.py  application.py  config.py  model.py  sentence_transformer.py
inference/tests/: test_application.py
internal/app/: app.go
internal/backend/: backend.go
internal/backend/meili/: client.go
internal/broker/rabbitmq/: broker.go
internal/config/: config.go
internal/enrichment/: enrichment.go
internal/grpcserver/: search.go
internal/health/: server.go
internal/httpapi/: search.go
internal/indexer/: revision_store.go  worker.go
internal/model/: document.go  event.go
service/: .dockerignore  Dockerfile  docker-compose.yml  go.mod  go.sum
service/cmd/search/: main.go
service/config/: config.example.yaml  local.yaml
service/internal/application/: ports.go
service/internal/backend/: backend.go
service/migrations/: 000001_init.down.sql  000001_init.up.sql
tests/enrichment/: enrichment_test.go
tests/grpcserver/: search_test.go
tests/indexer/: lease_test.go  revision_store_test.go  worker_test.go
tests/model/: event_test.go
(+29 files in other folders)
