[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "onix-search-inference"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "pydantic>=2.11,<3",
  "sentence-transformers>=5,<6",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = ["httpx>=0.28,<1", "mypy>=1.17,<2", "pytest>=8.4,<9", "ruff>=0.12,<1"]

[tool.hatch.build.targets.wheel]
packages = ["src/onix_search_inference"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["onix_search_inference"]

[[tool.mypy.overrides]]
module = ["sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
